--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -3,3 +3,6 @@
 @import "scss/_header";
 @import "scss/_footer";
 @import "scss/_slider.scss";
+@import "scss/_about_us";
+@import "scss/_hero-section";
+@import "scss/_banner";
