--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -2,7 +2,7 @@
 @import "scss/_fonts";
 @import "scss/_header";
 @import "scss/_footer";
-@import "scss/_slider.scss";
+@import "scss/_special-section.scss";
 @import "scss/_about_us";
 @import "scss/_hero-section";
 @import "scss/_banner";
