--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -7,3 +7,6 @@
 @import "scss/_about_us";
 @import "scss/_hero-section";
 @import "scss/_banner";
+@import "scss/_client-message";
+@import "scss/_our-team";
+
