--- a/assets/css/scss/_about_us.scss
+++ b/assets/css/scss/_about_us.scss
@@ -39,12 +39,13 @@
 
   .about-content {
     .subtitle {
-      text-transform: uppercase;
-      font-size: 0.75rem;
+      font-size: 14px;
       letter-spacing: 1px;
-      color: #f2d48a;
-      margin-bottom: 1rem;
-      display: block;
+      color: #c7a450;
+      text-transform: uppercase;
+      display: inline-block;
+      border-bottom: 2px solid #c7a450;
+      margin-bottom: 10px;
     }
 
     .headline {
