gallery and testimonials section addded fully

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -7,3 +7,6 @@
 @import "scss/_hero-section";
 @import "scss/_banner";
 @import "scss/_menu";
+@import "scss/_gallery";
+@import "scss/_services";
+@import "scss/_testimonial";
