--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -10,3 +10,8 @@
 @import "scss/_gallery";
 @import "scss/_services";
 @import "scss/_testimonial";
+
+@import "scss/_try-hero";
+@import "scss/_try-about";
+@import "scss/_intro-text";
+@import "scss/_services-overview";
